Migração de banco e dados e implementação de banco e implementação da exclusao logica de destinos e viagens.